# deploy

./: .env.example  Cargo.toml  readme.md
src/: main.rs
