[package]
name = "gha-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
octocrab = "0.32"
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
dotenv = "0.15"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.31"
